[package]
name = "bevy_glutin"
version = "0.1.3"
edition = "2018"
authors = ["Bevy Contributors <bevyengine@gmail.com>", "Carter Anderson <mcanders1@gmail.com>"]
description = "A winit window and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[features]

[dependencies]
# bevy
bevy_app = "0.1.3"
bevy_ecs = "0.1.3"
bevy_input = "0.1.3"
bevy_math = "0.1.3"
bevy_window = "0.1.3"
bevy_utils = {git  = "https://github.com/jamescarterbell/bevy_utils.git"}

# glium and it's dependencies
glutin  = {git  = "https://github.com/jamescarterbell/glutin.git"}

# other
log = { version = "0.4", features = ["release_max_level_info"] }